LightTube/wwwroot/css/lighttube.css
/* ... */
.search-bar__input::placeholder {
    color: var(--text-secondary);
    font-size: larger;
}

.search-bar__submit {
    width: 64px;
    flex-shrink: 0;
    border: 1px solid var(--border-color);
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
    font-size: .7rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--context-menu-background);
}

/* Account buttons */

.account-buttons {
    display: flex;
    flex-direction: row;
    gap: 8px;
    margin-right: 16px;
}

/* The menu dropdown thing */

.dropdown {
    position: relative;
    display: flex;
}

.dropdown > input[type="checkbox"] {
    display: none;
}

.dropdown > label {
    width: 100%;
    height: 100%;
    margin: -8px;
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.dropdown__menu {
    position: absolute;
    z-index: 999;
    display: none;
    top: 40px;
    padding: 6px 0;
    margin: 0;
    width: 300px;
    border-radius: 8px;
    box-shadow: var(--border-color) 0 0 5px;
    background-color: var(--context-menu-background)
}

.dropdown__item {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 16px;
    height: 40px;
    column-gap: 16px;
    color: var(--text-primary);
    text-decoration: none;
}

.dropdown__item:hover {
    background-color: var(--chip-background-hover);
}

.dropdown__item:active {
    background-color: var(--chip-background-active);
}

.dropdown > input[type="checkbox"]:checked ~ div,
.dropdown__menu:target {
    display: block;
}

/* Buttons / Form Elements */

.icon-button-container {
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.icon-button {
    width: 24px;
    height: 24px;
    color: #000;
    padding: 8px;
    transition: background-color linear 100ms;
    border-radius: 50%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.icon-button:hover {
    background-color: var(--button-hover-background);
}

.icon-button:active {
    background-color: var(--button-active-background);
}

*[class^="btn"] {
    height: 36px;
    display: flex;
    flex-direction: row;
    gap: 8px;
    border: 1px solid var(--border-color);
    justify-content: center;
    align-items: center;
    transition: background-color linear 100ms;
    padding: 0 8px;
    text-decoration: none;
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    border-radius: 18px;
    width: fit-content;
}

*[class^="btn"]:hover {
    background-color: var(--button-hover-background);
}

*[class^="btn"]:active {
    background-color: var(--button-active-background);
}

*[class^="btn"] > .icon {
    margin: 8px 0;
}

*[class^="btn"] > .text {
    margin: 8px 0;
    padding: 0 8px;
    line-height: 24px;
    font-weight: 500;
    white-space: nowrap;
}

.btn-blue, .btn-blue > svg {
    color: #3ea6ff;
}

.btn-blue:hover {
    background-color: var(--btn-hover-color-blue);
}

.btn-white, .btn-white > svg {
    background-color: #fff;
    color: #000;
}

.btn-white:hover {
    background-color: var(--btn-hover-color-white);
    border-color: var(--btn-hover-color-white);
    color: #000;
}

.btn-outline {
    background-color: #0000;
}

.btn-subscribe {
    background-color: var(--subscribe-button, #c00);
    color: white;
}

.btn-subscribe:hover {
    background-color: var(--subscribe-button-hover, #c00);
}

.btn-subscribed {
    background-color: var(--subscribe-button-subscribed);
    color: var(--text-primary);
}

.btn-subscribed:hover {
    background-color: var(--subscribe-button-subscribed-hover);
}

.btn-subscribed:active {
    background-color: var(--chip-background-active);
}

/* ==== WATCH PAGE START ==== */

@media screen and (min-width: 1085px) {
    .watch-page {
        display: grid;
        grid-template-columns: 1fr 400px;
        grid-template-rows: auto auto max-content;
        gap: 12px 24px;
        grid-template-areas:
			"player second-column"
			"info second-column"
			"comments second-column";
        margin: 24px auto auto;
        padding: 0 24px;
    }
}

@media screen and (max-width: 1085px) {
    .watch-page {
        display: grid;
        grid-auto-flow: column;
        grid-template-columns: 1fr;
        grid-auto-rows: auto;
        gap: 12px 24px;
        grid-template-areas:
			"player"
			"info"
			"second-column"
			"comments";
        padding: 0 8px;
    }

    .player-container {
        width: 100vw;
        margin-left: -8px;
        height: auto !important;
    }
}

.watch-page, .watch-page > div {
    box-sizing: border-box;
    min-height: 100px;
}

.watch-page {
    max-width: 1684px;
}

.player-container {
    max-width: var(--video-player-width-max);
    grid-area: player;
    max-height: var(--video-player-height-max);
}

.player-wrapper {
    background-color: #000;
    height: 100%;
    margin: auto;
}

.player {
    width: 100%;
    height: 100%;
}

.player-error-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 20%;
    height: 100%;
    gap: 32px;
}

@media screen and (max-width: 1085px) {
    .player-error-container {
        padding: 8px;
    }

    .player-error-container svg {
        width: 32px;
        height: 32px;
    }
}

.player-error-container *:not(a) {
    color: white;
}

.player-error-container .title {
    font-size: 1.3rem;
}

.noscript-quality-switcher {
    background-color: var(--nojs-color-switcher, #f5d562);
    color: var(--text-primary, #000);
    padding: 8px;
    font-size: 1.1rem;
    z-index: 20;
    position: relative;
    top: 0;
    bottom: 2rem;
}

.playlist-view-container {
    grid-area: playlist;
}

.second-column {
    grid-area: second-column;
    display: flex;
    flex-direction: column;
    gap: 24px;
}
/* ... */

